add function to count and print number of merge conflicts

--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -74,21 +74,22 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "from IPython.display import display\n",
     "\n",
     "def consolidate_rows(rows):\n",
     "    \"\"\"Consolidate rows with user input for conflict resolution, handling blank and non-blank values appropriately.\"\"\"\n",
     "    consolidated = rows.iloc[0].copy()  # Start with the first row as the base for consolidation\n",
+    "    num_merge_conflicts = sum(len(rows[column].dropna().unique()) > 1 for column in rows.columns)\n",
+    "    print(f\"There are {num_merge_conflicts} merge conflicts to resolve: \")\n",
+    "    \n",
     "    for column in rows.columns:\n",
     "        # Dropping NaN to consider non-empty values for conflict detection\n",
     "        non_empty_values = rows[column].dropna().unique()\n",
     "        \n",
-    "        # If there's exactly one non-NaN value, use it directly\n",
     "        if len(non_empty_values) == 1:\n",
     "            consolidated[column] = non_empty_values[0]\n",
     "        elif len(non_empty_values) > 1:\n",
     "            print(f\"\\nConflict in '{column}' column with unique values: {non_empty_values}\")\n",
-    "            # Prepare a conflict DataFrame excluding NaN values for user selection\n",
     "            conflict_df = rows[[column]].dropna().drop_duplicates().reset_index(drop=True)\n",
     "            display_df = conflict_df.reset_index().rename(columns={\"index\": \"Choice\"})\n",
     "            display_df['Choice'] += 1  # Adjust choice numbering to start from 1\n",
@@ -97,40 +98,28 @@
     "            chosen_index = input(f\"Select the row number to keep for {column} (1-{len(conflict_df)}), or type 'exit' to stop: \")\n",
     "            if chosen_index.lower() == 'exit':\n",
     "                print(\"Operation stopped by user. Saving progress...\")\n",
-    "                return None  # Allow early exit from consolidation\n",
+    "                return None\n",
     "            \n",
     "            try:\n",
-    "                chosen_index = int(chosen_index) - 1  # Convert to zero-based index\n",
+    "                chosen_index = int(chosen_index) - 1\n",
     "                if 0 <= chosen_index < len(conflict_df):\n",
-    "                    # Ensure scalar value assignment by specifying column for .iloc\n",
-    "                    consolidated[column] = conflict_df.iloc[chosen_index, 0]  # Access scalar value directly\n",
+    "                    consolidated[column] = conflict_df.iloc[chosen_index, 0]\n",
     "                else:\n",
     "                    print(\"Invalid row number. No changes made to this column.\")\n",
     "            except ValueError:\n",
     "                print(\"Invalid input. Please enter a valid row number or 'exit'.\")\n",
-    "                return None  # Handle non-integer inputs gracefully\n",
+    "                return None\n",
     "        else:\n",
-    "            # If all values in this column for the group are NaN, leave the consolidated value as NaN\n",
     "            consolidated[column] = np.nan\n",
-    "    \n",
     "    return consolidated\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def has_conflict(group):\n",
     "    \"\"\"Check if there is any conflict within the group, ignoring NaN values.\"\"\"\n",
-    "    for column in group.columns:\n",
-    "        non_na_values = group[column].dropna().unique()\n",
-    "        if len(non_na_values) > 1:\n",
-    "            return True\n",
-    "    return False\n",
+    "    return any(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "\n",
     "def main(csv_file_path):\n",
-    "    # Load the CSV, treat all data as string to prevent automatic NaN conversion for blank cells\n",
     "    df = pd.read_csv(csv_file_path, dtype=str)\n",
-    "\n",
-    "    original_order_df = df.copy()  # Keep a copy for reference to the original order\n",
+    "    original_order_df = df.copy()\n",
     "\n",
     "    duplicates = df[df.duplicated('account_url', keep=False)]\n",
     "    \n",
@@ -140,11 +129,20 @@
     "        return df\n",
     "    \n",
     "    consolidated_list = []\n",
+    "    total_conflicts = 0  # Initialize total conflicts count\n",
     "    for account_url, group in duplicates.groupby('account_url'):\n",
     "        if not has_conflict(group):\n",
-    "            continue  # Skip this group if no conflict is found\n",
+    "            continue\n",
     "        \n",
-    "        print(f\"Processing next duplicate group for account_url: {account_url}\")\n",
+    "        total_conflicts += sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
+    "        \n",
+    "    print(f\"There are {total_conflicts} merge conflicts to resolve: \")\n",
+    "    \n",
+    "    for account_url, group in duplicates.groupby('account_url'):\n",
+    "        if not has_conflict(group):\n",
+    "            continue\n",
+    "        \n",
+    "        print(f\"\\nProcessing next duplicate group for account_url: {account_url}\")\n",
     "        display(group)\n",
     "        consolidated_row = consolidate_rows(group)\n",
     "        if consolidated_row is None:\n",
@@ -162,7 +160,6 @@
     "    print(\"Consolidation complete. Results saved to 'result.csv'.\")\n",
     "    return df\n",
     "\n",
-    "# Replace 'input.csv' with your actual CSV file path\n",
     "csv_file_path = 'input.csv'\n",
     "df_processed = main(csv_file_path)\n"
    ]
