add a ipython output clear so the prompts dont keep going down screen in jupyter

--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -76,6 +76,9 @@
     "import numpy as np\n",
     "from IPython.display import display\n",
     "\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "\n",
     "def consolidate_rows(rows):\n",
     "    \"\"\"Consolidate rows with user input for conflict resolution, handling blank and non-blank values appropriately.\"\"\"\n",
     "    consolidated = rows.iloc[0].copy()  # Start with the first row as the base for consolidation\n",
@@ -96,6 +99,7 @@
     "            display(display_df)\n",
     "            \n",
     "            chosen_index = input(f\"Select the row number to keep for {column} (1-{len(conflict_df)}), or type 'exit' to stop: \")\n",
+    "            clear_output()  # Clear the output after receiving input\n",
     "            if chosen_index.lower() == 'exit':\n",
     "                print(\"Operation stopped by user. Saving progress...\")\n",
     "                return None\n",
@@ -112,6 +116,8 @@
     "        else:\n",
     "            consolidated[column] = np.nan\n",
     "    return consolidated\n",
+    "\n",
+    "\n",
     "\n",
     "def has_conflict(group):\n",
     "    \"\"\"Check if there is any conflict within the group, ignoring NaN values.\"\"\"\n",
