add function to make backup of original sheet before running

--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -16,14 +16,29 @@
     "# !pip install pandas numpy\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "from IPython.display import clear_output\n",
+    "import os\n",
+    "import shutil"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "VARS"
+    "# # Load the CSV file\n",
+    "# csv_file_path = input(\"Enter the path to the CSV file: \")\n",
+    "\n",
+    "# df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "# # Replace NaN values with a placeholder for blanks only if you're sure they represent truly blank cells\n",
+    "# BLANK_PLACEHOLDER = \"<BLANK>\"  # Define a constant for blank placeholders\n",
+    "\n",
+    "# # Iterate over all columns in the DataFrame\n",
+    "# for column in df.columns:\n",
+    "#     df[column].fillna(BLANK_PLACEHOLDER, inplace=True)"
    ]
   },
   {
@@ -33,7 +48,8 @@
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "csv_file_path = 'input.csv'\n",
+    "csv_file_path = input(\"Enter the path to the CSV file: \")\n",
+    "\n",
     "df = pd.read_csv(csv_file_path)\n",
     "\n",
     "# Replace NaN values with a placeholder for blanks only if you're sure they represent truly blank cells\n",
@@ -41,43 +57,7 @@
     "\n",
     "# Iterate over all columns in the DataFrame\n",
     "for column in df.columns:\n",
-    "    df[column].fillna(BLANK_PLACEHOLDER, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # df.head()\n",
-    "# # df.info()\n",
-    "\n",
-    "\n",
-    "# # Duplicates ----------\n",
-    "# print(\"Number of duplicate rows:\", len(df[df.duplicated('account_url', keep=False)]))\n",
-    "# df[df.duplicated('account_url', keep=False)].sort_values(['account_url'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from IPython.display import display\n",
-    "\n",
-    "\n",
-    "from IPython.display import clear_output\n",
+    "    df[column].fillna(BLANK_PLACEHOLDER, inplace=True)\n",
     "\n",
     "def consolidate_rows(rows):\n",
     "    \"\"\"Consolidate rows with user input for conflict resolution, handling blank and non-blank values appropriately.\"\"\"\n",
@@ -123,7 +103,14 @@
     "    \"\"\"Check if there is any conflict within the group, ignoring NaN values.\"\"\"\n",
     "    return any(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "\n",
+    "\n",
+    "\n",
     "def main(csv_file_path):\n",
+    "\n",
+    "    backup_file_path = os.path.splitext(csv_file_path)[0] + '_backup.csv'\n",
+    "    shutil.copy2(csv_file_path, backup_file_path)\n",
+    "    print(f\"Backup of the CSV file created at: {backup_file_path}\")\n",
+    "\n",
     "    df = pd.read_csv(csv_file_path, dtype=str)\n",
     "    original_order_df = df.copy()\n",
     "\n",
@@ -136,6 +123,8 @@
     "    \n",
     "    consolidated_list = []\n",
     "    total_conflicts = 0  # Initialize total conflicts count\n",
+    "    handled_urls = []  # List to store account_urls that have been handled\n",
+    "\n",
     "    for account_url, group in duplicates.groupby('account_url'):\n",
     "        if not has_conflict(group):\n",
     "            continue\n",
@@ -143,31 +132,35 @@
     "        total_conflicts += sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "        \n",
     "    print(f\"There are {total_conflicts} merge conflicts to resolve: \")\n",
+    "    remaining_conflicts = total_conflicts\n",
     "    \n",
     "    for account_url, group in duplicates.groupby('account_url'):\n",
     "        if not has_conflict(group):\n",
     "            continue\n",
     "        \n",
     "        print(f\"\\nProcessing next duplicate group for account_url: {account_url}\")\n",
+    "        print(f\"Remaining merge conflicts: {remaining_conflicts}\")\n",
     "        display(group)\n",
     "        consolidated_row = consolidate_rows(group)\n",
     "        if consolidated_row is None:\n",
     "            print(\"Operation stopped by user. Saving progress...\")\n",
     "            break\n",
     "        consolidated_list.append(consolidated_row)\n",
+    "        handled_urls.append(account_url)\n",
+    "        remaining_conflicts -= sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "    \n",
     "    if consolidated_list:\n",
     "        consolidated_df = pd.DataFrame(consolidated_list, columns=df.columns)\n",
-    "        df = pd.concat([original_order_df, consolidated_df], ignore_index=False)\n",
-    "        df = df.drop_duplicates('account_url', keep='last')\n",
+    "        df = df[~df['account_url'].isin(handled_urls)]  # Drop only the rows that have been handled\n",
+    "        df = pd.concat([df, consolidated_df], ignore_index=False)  # Append consolidated data\n",
     "    \n",
     "    df.sort_index(inplace=True)\n",
-    "    df.to_csv('result.csv', index=False)\n",
-    "    print(\"Consolidation complete. Results saved to 'result.csv'.\")\n",
+    "    df.to_csv(csv_file_path, index=False)  # Overwrite the original CSV file\n",
+    "    print(f\"Consolidation complete. Results saved to '{csv_file_path}'.\")\n",
     "    return df\n",
     "\n",
-    "csv_file_path = 'input.csv'\n",
-    "df_processed = main(csv_file_path)\n"
+    "\n",
+    "main(csv_file_path)"
    ]
   }
  ],
