--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -53,11 +53,10 @@
     "df = pd.read_csv(csv_file_path)\n",
     "\n",
     "# Replace NaN values with a placeholder for blanks only if you're sure they represent truly blank cells\n",
-    "BLANK_PLACEHOLDER = \"<BLANK>\"  # Define a constant for blank placeholders\n",
+    "BLANK_PLACEHOLDER = \"<BLANK>\"\n",
+    "df.fillna({column: BLANK_PLACEHOLDER for column in df.columns}, inplace=True)\n",
     "\n",
-    "# Iterate over all columns in the DataFrame\n",
-    "for column in df.columns:\n",
-    "    df[column].fillna(BLANK_PLACEHOLDER, inplace=True)\n",
+    "\n",
     "\n",
     "def consolidate_rows(rows):\n",
     "    \"\"\"Consolidate rows with user input for conflict resolution, handling blank and non-blank values appropriately.\"\"\"\n",
