add function to merge rows with no conflicts

--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -13,40 +13,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # !pip install pandas numpy\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
+    "# from IPython.display import display\n",
+    "# from IPython.display import clear_output\n",
+    "# import os\n",
+    "# import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# !pip install pandas numpy\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from IPython.display import display\n",
     "from IPython.display import clear_output\n",
     "import os\n",
-    "import shutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Load the CSV file\n",
-    "# csv_file_path = input(\"Enter the path to the CSV file: \")\n",
+    "import shutil\n",
     "\n",
-    "# df = pd.read_csv(csv_file_path)\n",
     "\n",
-    "# # Replace NaN values with a placeholder for blanks only if you're sure they represent truly blank cells\n",
-    "# BLANK_PLACEHOLDER = \"<BLANK>\"  # Define a constant for blank placeholders\n",
     "\n",
-    "# # Iterate over all columns in the DataFrame\n",
-    "# for column in df.columns:\n",
-    "#     df[column].fillna(BLANK_PLACEHOLDER, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load the CSV file\n",
     "csv_file_path = input(\"Enter the path to the CSV file: \")\n",
     "\n",
@@ -103,9 +94,32 @@
     "    return any(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "\n",
     "\n",
+    "def auto_merge_rows(rows):\n",
+    "    \"\"\"Automatically merge rows without conflicts by taking the first non-blank value.\"\"\"\n",
+    "    consolidated = rows.iloc[0].copy()  # Start with the first row as the base for consolidation\n",
+    "    for column in rows.columns:\n",
+    "        non_blank_values = rows[column][rows[column] != BLANK_PLACEHOLDER].unique()\n",
+    "        if non_blank_values.size > 0:\n",
+    "            consolidated[column] = non_blank_values[0]\n",
+    "        else:\n",
+    "            consolidated[column] = BLANK_PLACEHOLDER\n",
+    "    return consolidated\n",
+    "\n",
+    "\n",
+    "\n",
+    "def auto_merge_rows(rows):\n",
+    "    \"\"\"Automatically merge rows without conflicts by taking the first non-blank value.\"\"\"\n",
+    "    consolidated = rows.iloc[0].copy()  # Start with the first row as the base for consolidation\n",
+    "    for column in rows.columns:\n",
+    "        non_blank_values = rows[column][rows[column] != BLANK_PLACEHOLDER].unique()\n",
+    "        if non_blank_values.size > 0:\n",
+    "            consolidated[column] = non_blank_values[0]\n",
+    "        else:\n",
+    "            consolidated[column] = BLANK_PLACEHOLDER\n",
+    "    return consolidated\n",
+    "\n",
     "\n",
     "def main(csv_file_path):\n",
-    "\n",
     "    backup_file_path = os.path.splitext(csv_file_path)[0] + '_backup.csv'\n",
     "    shutil.copy2(csv_file_path, backup_file_path)\n",
     "    print(f\"Backup of the CSV file created at: {backup_file_path}\")\n",
@@ -124,29 +138,34 @@
     "    total_conflicts = 0  # Initialize total conflicts count\n",
     "    handled_urls = []  # List to store account_urls that have been handled\n",
     "\n",
+    "    # First, handle rows without conflicts\n",
     "    for account_url, group in duplicates.groupby('account_url'):\n",
     "        if not has_conflict(group):\n",
-    "            continue\n",
-    "        \n",
-    "        total_conflicts += sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
+    "            print(f\"\\nAutomatically merging rows for account_url: {account_url}\")\n",
+    "            consolidated_row = auto_merge_rows(group)\n",
+    "            consolidated_list.append(consolidated_row)\n",
+    "            handled_urls.append(account_url)\n",
+    "\n",
+    "    # Then, handle rows with conflicts\n",
+    "    for account_url, group in duplicates.groupby('account_url'):\n",
+    "        if has_conflict(group):\n",
+    "            total_conflicts += sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "        \n",
     "    print(f\"There are {total_conflicts} merge conflicts to resolve: \")\n",
     "    remaining_conflicts = total_conflicts\n",
     "    \n",
     "    for account_url, group in duplicates.groupby('account_url'):\n",
-    "        if not has_conflict(group):\n",
-    "            continue\n",
-    "        \n",
-    "        print(f\"\\nProcessing next duplicate group for account_url: {account_url}\")\n",
-    "        print(f\"Remaining merge conflicts: {remaining_conflicts}\")\n",
-    "        display(group)\n",
-    "        consolidated_row = consolidate_rows(group)\n",
-    "        if consolidated_row is None:\n",
-    "            print(\"Operation stopped by user. Saving progress...\")\n",
-    "            break\n",
-    "        consolidated_list.append(consolidated_row)\n",
-    "        handled_urls.append(account_url)\n",
-    "        remaining_conflicts -= sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
+    "        if has_conflict(group):\n",
+    "            print(f\"\\nProcessing next duplicate group for account_url: {account_url}\")\n",
+    "            print(f\"Remaining merge conflicts: {remaining_conflicts}\")\n",
+    "            display(group)\n",
+    "            consolidated_row = consolidate_rows(group)\n",
+    "            if consolidated_row is None:\n",
+    "                print(\"Operation stopped by user. Saving progress...\")\n",
+    "                break\n",
+    "            consolidated_list.append(consolidated_row)\n",
+    "            handled_urls.append(account_url)\n",
+    "            remaining_conflicts -= sum(len(group[column].dropna().unique()) > 1 for column in group.columns)\n",
     "    \n",
     "    if consolidated_list:\n",
     "        consolidated_df = pd.DataFrame(consolidated_list, columns=df.columns)\n",
@@ -157,7 +176,6 @@
     "    df.to_csv(csv_file_path, index=False)  # Overwrite the original CSV file\n",
     "    print(f\"Consolidation complete. Results saved to '{csv_file_path}'.\")\n",
     "    return df\n",
-    "\n",
     "\n",
     "main(csv_file_path)"
    ]
