add a way to exit without saving

--- a/tools-done/dedupe-merge-rows-csv/script.ipynb
+++ b/tools-done/dedupe-merge-rows-csv/script.ipynb
@@ -13,13 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # !pip install pandas numpy\n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# from IPython.display import display\n",
-    "# from IPython.display import clear_output\n",
-    "# import os\n",
-    "# import shutil"
+    "# !pip install pandas numpy\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from IPython.display import display\n",
+    "from IPython.display import clear_output\n",
+    "import os\n",
+    "import shutil"
    ]
   },
   {
@@ -28,19 +28,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pandas numpy\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from IPython.display import display\n",
-    "from IPython.display import clear_output\n",
-    "import os\n",
-    "import shutil\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Load the CSV file\n",
-    "csv_file_path = input(\"Enter the path to the CSV file: \")\n",
-    "\n",
+    "# csv_file_path = input(\"Enter the path to the CSV file: \")\n",
+    "csv_file_path = \"medium.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv(csv_file_path)\n",
     "\n",
     "# Replace NaN values with a placeholder for blanks only if you're sure they represent truly blank cells\n",
@@ -71,8 +68,7 @@
     "            chosen_index = input(f\"Select the row number to keep for {column} (1-{len(conflict_df)}), or type 'exit' to stop: \")\n",
     "            clear_output()  # Clear the output after receiving input\n",
     "            if chosen_index.lower() == 'exit':\n",
-    "                print(\"Operation stopped by user. Saving progress...\")\n",
-    "                return None\n",
+    "                raise Exception(\"Operation stopped by user. No progress saved.\")\n",
     "            \n",
     "            try:\n",
     "                chosen_index = int(chosen_index) - 1\n",
@@ -86,7 +82,6 @@
     "        else:\n",
     "            consolidated[column] = np.nan\n",
     "    return consolidated\n",
-    "\n",
     "\n",
     "\n",
     "def has_conflict(group):\n",
